# Talos-XII

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: config.json
docs/: COMMIT_CONVENTION.md
src/: autograd.rs  config.rs  dbn.rs  dqn.rs  grad_check.rs  i18n.rs  main.rs  neural.rs  nn.rs  ppo.rs  rng.rs  sim.rs  simd.rs  trainer.rs  transformer.rs  worker.rs
