[package]
name = "talos_xii"
version = "0.2.0"
edition = "2021"

[dependencies]
rayon = "1.10"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
memmap2 = "0.9"
bytemuck = "1.14"
bincode = "1.3"
clap = { version = "4.5.56", features = ["derive"] }
log = "0.4.29"
env_logger = "0.11.8"
colored = "3.1.1"

[profile.release]
lto = true        # Link Time Optimization (smaller binary, faster code)
codegen-units = 1 # Maximize optimization units (slower compile, faster code)
panic = 'unwind'  # Keep unwind for robustness (we want to catch panics)
strip = true      # Strip symbols to reduce size

# Add optimization for dev profile to speed up debug builds (critical for neural network training)
[profile.dev]
opt-level = 3     # Enable full optimizations even in debug mode
debug-assertions = true # Keep assertions for safety
overflow-checks = false # Disable overflow checks for speed (math intensive)
